# open-quantum-safe-attacks

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  USAGE.md  access-token  measurments.csv  oqs-afw.bash  rejection-sampling-plaintexts.db  run-bike-error-weight-test.sh  run-incremental-bike-attack.sh
.cargo/: config
bin-archive/: oqs-afw
data/: 1344aes-C0,64,63-100000.csv  1344aes-C0,64-100000.csv  1344aes-C0,7,15,23,31,39,47,55,63-1000000.csv  1344aes-C0-10000.csv  1344aes-C56,57,58,59,60,61,62,63-10000-5000.csv  1344aes-C57,58,59,60,61,62,63-1000.csv  1344aes-C63-100.csv  1344aes-C63-1000.csv  1344aes-C63-100000.csv  1344aes-Call-1000.csv  baseline-internal-laptop-1344-1000.csv  baseline-internal-laptop-1344-10000.csv  baseline-laptop-1344-1000.csv  baseline-laptop-1344-10000.csv  profiling-100000.csv  profiling-1344-laptop-10000-5000.csv  profiling-1344-laptop-50000-10000.csv  profiling-1344-laptop-countminval-10000-5000-2.csv  profiling-1344-laptop-countminval-10000-5000-3.csv  profiling-1344-laptop-countminval-10000-5000-4.csv  profiling-1344-laptop-countminval-10000-5000-5.csv  test.csv  (+3 more)
hqc-attack/: .gitignore  Makefile  (+5 more)
hqc-attack/collect_attack_stats/gather_data_rayon/: Cargo.toml
hqc-attack/collect_attack_stats/gather_data_rayon/src/: main.rs
main/: Cargo.toml
main/src/: attack.rs  code_align.rs  code_align.rs.tmpl  main.rs  utils.rs
main/src/attack/: fo_timing.rs  memcmp_frodo.rs  mod.rs  rejection_sampling.rs
main/src/attack/fo_timing/: baseline.rs  frodo_crack_s.rs  modify_and_measure.rs  profile.rs
main/src/attack/memcmp_frodo/: baseline.rs  crack_s.rs  find_e.rs  mod.rs  modify_and_measure.rs  profile.rs
main/src/attack/rejection_sampling/: attack.rs  bike_attack.rs  bike_distance_spectrum.rs  bike_error_weight.rs  bike_eval_distinguisher.rs  histogram_rejections.rs  iteration_timings.rs  plaintexts.rs  verify_timing_attack.rs
main/src/utils/: code_align.rs  code_align.rs.tmpl  logging.rs  mod.rs  progressbar.rs  recorders.rs  threadding.rs
scripts/postprocess/: Cargo.toml
scripts/postprocess/src/: main.rs  rapl.rs  utils.rs
(+68 files in other folders)
