[package]
name = "postprocess"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
simple_logger = "*"
log = "*"
anyhow = "*"
linya = "*"
rayon = "1.5"
csv = "1.1"
ndarray = "0.15"
ndarray-csv = "0.5.1"
num_cpus = "1.13.0"
itertools = "*"
flate2 = "*"
rand = "*"