[package]
name = "gather_data_rayon"
version = "0.1.0"
authors = ["ambiso <ambiso@invalid>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rayon = "1.5"
gather_data_lib = { path = "../gather_data_lib", version = "0.1" }
chrono = "0.4"